--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Slow Monkey Codes</h1>>
+<h1>Slow Monkey Codes</h1>
 
 <div class="posts">
     {% for post in site.posts %}
