Trying to add the site description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <h1>Slow Monkey Codes</h1>
+<p class="site-description">{{ site.description }}</p>
 
 <div class="posts">
     {% for post in site.posts %}
