--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1><img src="https://avatars1.githubusercontent.com/u/1640786?s=30&v=4" alt="Home"> Slow Monkey Codes</h1>
-<p class="site-description">{{ site.description }}</p>
+<i><p class="site-description">{{ site.description }}</p></i>
 
 <div class="posts">
     {% for post in site.posts %}
