--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ---
-layout: default
 ---
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} 111</title>
   </head>
   <body>
     <h1><img src="https://avatars1.githubusercontent.com/u/1640786?s=30&v=4" alt="Home"> Slow Monkey Codes</h1>
