--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} 111</title>
+    <title>{{ page.title }}</title>
   </head>
   <body>
     <h1><img src="https://avatars1.githubusercontent.com/u/1640786?s=30&v=4" alt="Home"> Slow Monkey Codes</h1>
