--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <script src="https://kit.fontawesome.com/9027950497.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <h1><img src="https://avatars1.githubusercontent.com/u/1640786?s=30&v=4" alt="Home"> Slow Monkey Codes</h1>
