--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: base_template
+layout: default
 ---
 <h1><img src="https://avatars1.githubusercontent.com/u/1640786?s=30&v=4" alt="Home"> Slow Monkey Codes</h1>
 <i>
