--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1><img src="https://avatars1.githubusercontent.com/u/1640786?s=30&v=4" alt="Home"> Slow Monkey Codes</h1>
+<h1 class="index-title"><img src="https://avatars1.githubusercontent.com/u/1640786?s=30&v=4" alt="Home"> Slow Monkey Codes</h1>
 <i>
   <p class="site-description">{{ site.description }}</p>
 </i>
